[package]
name = "nihongo"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/aeyoll/nihongo-rs"
repository = "https://github.com/aeyoll/nihongo-rs"
license = "MIT"
description = "Learn Japanese words with French translations"
readme = "README.md"
keywords = ["japanese", "french", "quiz", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
inquire = "0.7.5"
colored = "2.0.4"
base64 = "0.22.1"
